<resources>
    <string name="app_name">Aha</string>
    <string name="speak" />
    <string name="wakeUpTime">När vaknar du på morgonen?</string>
    <string name="enterName">Skriv in ditt namn!</string>
    <string name="next">Nästa</string>
    <string name="back">Tillbaka</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="SleepTime">När går du och lägger dig?</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="summary">Detta är din sammanfattning:</string>
    <string name="name">NAMN:</string>
    <string name="wakeUp">VAKNAR:</string>
    <string name="sleep">SOVER:</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_activity_wait">WaitActivity</string>
    <string name="logo">Aha logotyp</string>
    <string name="confirmName">Bekräfta namn</string>
    <string name="deleteName">Radera namnfältet</string>
    <string name="everythingWorks">söt katt säger allting fungerar som det ska! Jag kommer att påminna dig när det behövs</string>
    <string name="play">Spela upp video</string>
    <string name="obt_sdk_app_id">78bcd71c-8db7-4dc6-b85d-eb25d563625d</string>
    <string name="obt_sdk_app_key">ca26167f-3398-475e-8d0f-94a3a4b90b99</string>
    <string name="instruction">Instruktionsvideo</string>
    <string name="anslut_till_tandborste">ANSLUT TILL TANDBORSTE</string>
    <string name="drawer_open">öppen</string>
    <string name="drawer_close">Stängd</string>
    <string name="brush_description">En bild på en tandborste som indikerar att du bör borsta tänderna.</string>
    <string name="refresh_description">En roterande pil som vid knapptryck kommer försöka koppla upp till tandborste på nytt.</string>
    <string name="sleeping_description">Söt katt som väntar på att du ska borsta tänderna snart.</string>
    <string name="settings">Här kan du ändra dina inställningar</string>
    <string name="userInfo">Användarens inställningar</string>
    <string name="line">Line 1</string>
    <string name="line2">Line 2</string>
</resources>
