<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcusjakobsson.aha.MainActivity">
        <EditText
            android:id="@+id/editText_EnterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/enterName"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="70sp" />

        <ImageButton
            android:id="@+id/button_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_EnterName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="133dp"
            android:background="@null"
            android:contentDescription="@string/speak"
            app:srcCompat="@drawable/microphone" />

        <ImageButton
            android:id="@+id/button_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_EnterName"
            android:layout_alignStart="@+id/editText_EnterName"
            android:layout_alignTop="@+id/button_mic"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="26dp"
            android:alpha="0.3"
            android:background="@null"
            android:onClick="button_erase_name"
            android:contentDescription="@string/deleteName"
            app:srcCompat="@drawable/cancel" />

        <ImageButton
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText_EnterName"
            android:layout_alignRight="@+id/editText_EnterName"
            android:layout_alignTop="@+id/button_cross"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp"
            android:alpha="0.3"
            android:background="@null"
            android:onClick="button_OK"
            android:contentDescription="@string/confirmName"
            app:srcCompat="@drawable/checked" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

</RelativeLayout>
