<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.marcusjakobsson.aha.SleepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/colorDisco"
            android:contentDescription="@string/SleepTime"
            android:gravity="center"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/imageButton_Play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:onClick="button_PlayVideo"
                    android:contentDescription="@string/play"
                    app:srcCompat="@drawable/play" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/bottom_navigation" />

</LinearLayout>
