<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.marcusjakobsson.aha.SleepActivity"
    android:background="@drawable/evening_background">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorDisco"
            android:contentDescription="@string/SleepTime"
            android:text="@string/SleepTime"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/sleepTimeTableListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:animateLayoutChanges="false"
            android:textAlignment="center"/>

    </RelativeLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:background="@color/colorDisco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@null"
                android:onClick="button_back"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@null"
                android:onClick="button_next"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </android.support.design.widget.BottomNavigationView>

</LinearLayout>
