<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.marcusjakobsson.aha.SummaryActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorDisco"
            android:contentDescription="@string/summary"
            android:gravity="center"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="46sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="60sp" />

            <View android:background="@drawable/rectangle"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/wakeUp"
                android:textAlignment="center"
                android:textSize="46sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_wakeup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="60sp" />

            <View android:background="@drawable/rectangle"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sleep"
                android:textAlignment="center"
                android:textSize="46sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="60sp" />

            <View android:background="@drawable/rectangle"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"/>

        </GridLayout>

    </RelativeLayout>
    <include layout="@layout/bottom_navigation"/>

</LinearLayout>
